<resources>
    <string name="app_name">Cohort Q3</string>
    <string name="bicycle">Bicycle</string>
    <string name="walk">Walk</string>
    <string name="driving">Driving</string>
    <string name="nav_maps">Navigate with Maps</string>
    <string name="get_map">Get Map</string>
    <string name="location">Location</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="jebait">You just got JEBAITED!</string>
    <string name="chkBoxLargeFontKey">largeBtnFont</string>
</resources>
