<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eric.cohortq3.MainActivity">

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"/>

    <Button
        android:id="@+id/btn_getMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/get_map"/>

    <RadioGroup
        android:id="@+id/mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/mode_bike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/bicycle"/>

        <RadioButton
            android:id="@+id/mode_walk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/walk"/>

        <RadioButton
            android:id="@+id/mode_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/driving"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickNavigate"
        android:text="@string/nav_maps"/>

</LinearLayout>
